2015-06-05 1.1.0 Log output changed
                 rtsp added per default
                 Retry count added in Advanced config tab
                 Bug fixes
                 Release version

2015-05-06 1.0.9 mc2xml integration (please read manual)
                 Manual updated to be read
                 SQL refactoring and minor fixes

2015-03-28 1.0.8 EPG Chart date buttons
                 mc2xml support
                 Minor fixes

2015-03-17 1.0.7 EPG chart visual enhancements:
                 Floating channel names and times, grid lines

2015-03-05 1.0.6 Minor enhancements
                 XMLTV time offset added

2015-02-27 1.0.5 Release version

2015-02-17 1.0.4 Fix for FFMPEG not responding part two

2015-02-04 1.0.3 Fix for FFMPEG not responding

2015-01-21 1.0.2 Fix for daylight saving time (#9)
                 Recurrent fix & retry on failed ffmpeg records (#10)

2014-11-23 1.0.1 XMLTV generator 'TVH_W' supported

2014-09-01 1.0.0 Mobile version for record management
                 Auto redirect for iOS and Android Mobile
                 Full Python 2.6.6/2.7/3 support
                 Better unicode support
                 Enhanced performance and memory usage for XMLTV
                 Refactoring and cleaning up
                 Bug fixes

2014-04-26 0.6.4 Password protection on remote connections added
                 Browsing for target folder selection added
                 Record name mask added
                 New manual and About page

2014-04-06 0.6.3 Recurrent records hotfix

2014-03-27 0.6.2 UI redesign and theme roller
                 Added english, german and russian translations (excl. About page)
                 jQuery date/time locale support also for other countries
                 Massive refactoring and fixes for client code
                 Table state saving in browser cache

2014-02-23 0.5.8 TVxb support
                 Structured config page with built-in plausibility control