@@ -62,6 +62,8 @@
     "Do you want to delete all of your EPG data?": "",
     "Record name mask (valid placeholders: %date% and %title%, default: '%date% - %title%')": "",
     "Record name mask must have at least one placeholder": "",
+    "Enable postprocessing": "",
+    "Postprocessing command (use %file% for full filename)": "",
     
     "at": "",
     "till": "",
