@@ -1,3 +1,5 @@
+2015-08-03 1.1.1 Postprocessing added (can be used to trigger media index)
+
 2015-06-05 1.1.0 Log output changed
                  rtsp added per default
                  Retry count added in Advanced config tab
